2014-01-23  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/vm.c (ficlVmTextIn|Out, ficlVmErrorOut): Superfluouse
	public functions removed.  Use ficlCallbackDefaultTextIn|Out and
	ficlCallbackDefaultErrorOut instead.

2014-01-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth-lib.h (c__FUNCTION__): Macro removed.

2014-01-20  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.h (FTH_XString): Stringizing macro added.

2014-01-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/ficl.h (struct ficlVm): void *repl slot added.

	* src/proc.c (ficl_get_help): Use gl_display_text if available.

	* src/utils.c (fth_repl):  New words history and bindkey added.
	New configuration variables *histdup*, *histfile*, *history*,
	*savehist*, *promptstyle* added.

2013-11-16  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: Remove hardcoded LDFLAGS if host is netbsd.

2013-08-26  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: New version number: 1.3.7

2013-08-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.c (fth_repl): gl_prompt_style changed from
	GL_LITERAL_PROMPT to GL_FORMAT_PROMPT.

2013-07-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac (HAVE_STRUCT_SOCKADDR_UN,
	HAVE_STRUCT_SOCKADDR_UN_SUN_LEN): Checks added.

2013-06-12  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs (voiced->unvoiced): Adjust to new
	make-formant-bank.

	* examples/site-lib/hooks.fs (view-files-select-hook): Hook
	removed.

	* examples/site-lib/snd-forth-init.fs: Adjust to new Snd
	behavior (removed view-files-dialog etc).

2013-03-08  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: *-mingw* case added to suppress -fPIC in CFLAGS.

2012-12-23  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: Check for libmissing (FreeBSD only).

2012-12-11  Michael Scholz  <mi-scholz@users.sourceforge.net>
