@@ -2,6 +2,13 @@ See ChangeLog for more.
 
 * 1.3.7
 
+Marcros renamed (old names can still be used):
+FTH_DOCUMENTATION_SYMBOL --> FTH_SYMBOL_DOCUMENTATION
+FTH_LAST_MESSAGE_SYMBOL	--> FTH_SYMBOL_LAST_MESSAGE
+FTH_MESSAGE_SYMBOL	--> FTH_SYMBOL_MESSAGE
+FTH_SOURCE_SYMBOL	--> FTH_SYMBOL_SOURCE
+FTH_TRACE_VAR_SYMBOL	--> FTH_SYMBOL_TRACE_VAR
+
 Macro c__FUNCTION__ removed.
 
 Superfluouse public functions ficlVmTextIn, ficlVmTextOut,
